# ansi_stdio

./: Makefile  README.md  pyproject.toml  test.py
scripts/: docs.sh  venv.sh
src/ansi_stdio/: bounds.py  buffer.py  clock.py  sprite.py
src/ansi_stdio/buffer/: animation.py  buffer.py  pyte_renderer.py
src/ansi_stdio/cli/: quantize.py
src/ansi_stdio/core/: versioned.py
tests/: test_bounds.py  test_buffer.py  test_clock.py
tests/buffer/: test_buffer.py
tests/core/: test_bounds.py  test_box.py  test_saved.py  test_versioned.py
